removed line height on icons to resolve IE11 alignment

--- a/static/vac_header.css
+++ b/static/vac_header.css
@@ -383,7 +383,6 @@
   height: 26px;
 }
 #header_css #wb-bnr img#mva-logo {
-  height: 20px;
   position: relative;
   top: 1px;
 }
@@ -392,7 +391,6 @@
 }
 #header_css #wb-bnr img#language-globe,
 #header_css img#maple-leaf {
-  height: 20px;
   margin-left: 5px;
   position: relative;
   top: -2px;
